--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-css2",
-  "version": "0.0.1-beta.1",
+  "version": "0.1.0",
   "description": "CSS transformer plugin for Rollup",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
