--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "types/index.d.ts",
+  "authors": "ocean <ocean7hy@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/naecoo/rollup-plugin-css2.git"
+  },
+  "homepage": "https://github.com/naecoo/rollup-plugin-css2/blob/main/README.md",
+  "bugs": "https://github.com/naecoo/rollup-plugin-css2/issues",
   "scripts": {
     "test": "ava",
     "test:watch": "ava --watch",
